--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -3,7 +3,7 @@ name: Cypress Tests
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   cypress-run:
@@ -20,13 +20,6 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-
-    - name: Start application
-      run: npm start &
-      # Make sure to use `&` to run the command in the background
-
-    - name: Wait for the app to start
-      run: npx wait-on http://localhost:3000
 
     - name: Run Cypress tests
       env:
