--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,17 +1,26 @@
 name: Cypress Tests
-on: [push]
+
+on:
+  push:
+  schedule:
+    # Daily schedule to run at 1:00 AM UTC, which is 08:00 AM WIB
+    - cron: '0 1 * * *'
+
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        containers: [1, 2]
+        containers: [1, 2] # Parallel containers
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Install dependencies
         run: npm install
+
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
