--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
-    "cypress": "^13.14.2"
+    "@4tw/cypress-drag-drop": "^2.2.5",
+    "cypress": "^13.14.2",
+    "cypress-xpath": "^2.0.1"
   }
 }
